--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -15,8 +15,8 @@
     <div id="cont">
     <div id="tp">
       <ul id="nav">
-        <li><a href="">+ Post</a></li>
-        <li><a href="/group/schedule?classid={{classid}}">+ Event</a></li>
+        <li><a href="/group/createPost?classid={{classid}}">+ Post</a></li>
+        <li><a href="/group/createEvent?classid={{classid}}">+ Event</a></li>
         <p1>{{data.title}} - <i>{{data.name}}</i></p1>
       </ul> 
       <ul id="events">
