--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -27,15 +27,10 @@
         <center>
           <div id="form">
             <p>{{message}}</p>
-            <form action="/user/upload" method="post" enctype="multipart/form-data">
+            <form method="post" action="/user/register" enctype="multipart/form-data">
               Select an image to upload:
               <input type="file" name="profile"> <br>
-              <input type="submit" value="Upload Image">
-            </form>
 
-            <br>
-
-            <form method="post" action="/user/register">
               Select your year:
               <select name="year">
                 <option value="freshman">Freshman</option>
@@ -43,6 +38,7 @@
                 <option value="junior">Junior</option>
                 <option value="senior">Senior</option>
               </select><br>
+
               <input type="text" name="fname" placeholder="first name" required><br> 
               <input type="text" name="lname" placeholder="last name" required><br>
               <input type="text" name="major" placeholder="major/concentration" required><br>  
@@ -50,7 +46,7 @@
               <input type="password" name="pass" placeholder="password" required><br>
               <input type="text" name="spireid" placeholder="spire id" required><br>
               <input type="date" name="dob" required><br>
-              <button class="btn">Sign Up</button>
+              <button class="btn" type="submit">Sign Up</button>
             </form>
           </div>
         </center>
