--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -30,7 +30,7 @@
 
   <ul id="postdata">
     <li><a><b>{{data.title}}</b> posted on {{data.date}} <b><i id="nameRight">{{data.name}}</i></b></a></li>
-    <li><a><i>{{data.content}}</i></a></li>
+    <li><a><i>{{data.content}}</i> <b id="flag">Flag</b></a></li>
   </ul>
 
   <ul id="reply">
@@ -38,12 +38,20 @@
   </ul>
 
   <div id="responsebox">
-    <form> 
-      <textarea id="textbox" rows="4"></textarea>
+    <form method="post" action="/group/postComment?classid={{data.cid}}&pid={{data.pid}}"> 
+      <textarea id="textbox" rows="4" name="content"></textarea>
       <center><button id="createbutton">Reply</button></center>
     </form>
   </div>
 
+  <ul id="comments">
+    {{#each comments}}
+    <li>
+      {{this.content}}
+    </li>
+    {{/each}}
+
+  </ul>
   </div>
 
 </html>
