--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -40,14 +40,20 @@
   <div id="responsebox">
     <form method="post" action="/group/postComment?classid={{data.cid}}&pid={{data.pid}}"> 
       <textarea id="textbox" rows="4" name="content"></textarea>
+      <label id="basic">Post as:</label>
+          <select name="anonymity">
+            <option value="Anonymous">Anonymous</option>
+            <option value="{{fname}}">{{fname}}</option>
+          </select><br><br>
       <center><button id="createbutton">Reply</button></center>
     </form>
   </div>
 
+
   <ul id="comments">
     {{#each comments}}
     <li>
-      {{this.content}}
+      {{this.content}} - {{this.name}}
     </li>
     {{/each}}
 
