added a comment about the chevron button toggle

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -55,7 +55,7 @@
         });
       });
 
-      var toggle = [0, 0, 0, 0, 0, 0];
+      var toggle = [0, 0, 0, 0, 0, 0]; //array to represent whether the icons for a class is open or not
 
       function changeClass(i){
         if( toggle[i] == 0 ){
