added last names to titles of posts and comments

--- a/views/createpost.handlebars
+++ b/views/createpost.handlebars
@@ -25,7 +25,7 @@
           <label id="basic">Post as:</label>
           <select name="anonymity">
             <option value="Anonymous">Anonymous</option>
-            <option value="{{fname}}">{{fname}}</option>
+            <option value="{{fname}} {{lname}}">{{fname}}</option>
           </select><br><br>
           <button id="createbutton">Create</button>
         </form> <!-- CLOSE FORM -->
