--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -46,7 +46,7 @@
         <label id="basic">Post as:</label>
         <select class="anonymity" name="anonymity">
             <option value="Anonymous">Anonymous</option>
-            <option value="{{fname}}">{{fname}}</option>
+            <option value="{{fname}} {{lname}}">{{fname}}</option>
         </select>
         </center>
       
