--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -30,7 +30,7 @@
 
   <ul id="postdata">
     <li><a><b>{{data.title}}</b> posted on {{data.date}} <b><i id="nameRight">{{data.name}}</i></b></a></li>
-    <li><a><i>"{{data.content}}"</i> <b id="flag">Flag</b></a></li>
+    <li><a><i>"{{data.content}}"</i></a></li>
   </ul>
 
   <ul id="reply">
