--- a/views/students.handlebars
+++ b/views/students.handlebars
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
 
   <div id="page">
@@ -10,6 +11,20 @@
         Zembo
     </div>
   </div>
+
+  <div id="banner">
+      {{#each classData}}
+      All Students in {{num}}
+      {{/each}}
+  </div>
+
+
   
-  {{data}}
+    {{#each classData}}
+    {{#each students}}
+      <a href="/user/profile?spireid={{this}}"><img id="drawerImage" src="/imgs/users/{{this}}.jpg"></a>
+    {{/each}}
+    {{/each}}
+
+
 </html>
