--- a/views/class.handlebars
+++ b/views/class.handlebars
@@ -26,6 +26,7 @@
       <ul id="nav">
         <li><a href="/group/createPost?classid={{classid}}">+ Post</a></li>
         <li><a href="/group/createEvent?classid={{classid}}">+ Event</a></li>
+        <li><a href="/class/students?classid={{classid}}">Students</a></li>
         <div id="dropDown2">
           <select id="selectID" name="classes" onChange="window.location.href=this.value">
             {{#each classes}}
