Added event statistics to each event page

--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -30,4 +30,7 @@
     </div>
   </div>
 
+  Attending: {{stats.attending.length}} <br>
+  Ignoring: {{stats.ignoring.length}} <br>
+  Total responses: {{stats.total}}
 </html>
