Added GO BACK buttons to different class pages

--- a/views/createEvent.handlebars
+++ b/views/createEvent.handlebars
@@ -37,4 +37,6 @@
 
     </div> <!-- CLOSE TP -->
   </div> <!-- CLOSE CONT -->
+
+  <center><a href="/class?classid={{classid}}">GO BACK</a></center>
 </html>
