--- a/views/students.handlebars
+++ b/views/students.handlebars
@@ -14,17 +14,15 @@
 
   <div id="banner">
       {{#each classData}}
-      All Students in {{num}}
+        All students in {{num}}
       {{/each}}
   </div>
 
-
-  
-    {{#each classData}}
+  {{#each classData}}
     {{#each students}}
       <a href="/user/profile?spireid={{this}}"><img id="drawerImage" src="/imgs/users/{{this}}.jpg"></a>
     {{/each}}
-    {{/each}}
+  {{/each}}
 
-
+  <center><a href="/class?classid={{classid}}">GO BACK</a></center>
 </html>
