Fixed array shuffling funtion to be ignored if user has no classes

--- a/views/online.handlebars
+++ b/views/online.handlebars
@@ -31,7 +31,7 @@
     {{#each online}}
       <a id="onlineLink" href="/user/profile">
         <div id="onlineUsers">
-          <img id="onlineImage" src="/imgs/users/{{this.spireid}}.jpg"><br>
+          <img id="onlineImage" src="/imgs/users/{{this.spireid}}.jpg">
           <center>{{fname}} {{lname}}</center>
         </div>
       </a>
