not attending people are now ignoring

--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -39,7 +39,7 @@
    </script>
    <ul id="graph">
    <li id="perce" style="background-color: #2878d8; height: 40px"><center><script>document.write(Math.round(({{stats.attending.length}}/{{stats.total}})*100)+'% attending');</script></center></li>
-   <li id="perce2" style="background-color: #ff9400; height: 40px"><center><script>document.write(Math.round(({{stats.ignoring.length}}/{{stats.total}})*100)+'% attending');</script></center></li>
+   <li id="perce2" style="background-color: #ff9400; height: 40px"><center><script>document.write(Math.round(({{stats.ignoring.length}}/{{stats.total}})*100)+'% ignoring');</script></center></li>
    </ul>
 
    <center><a href="/class?classid={{classid}}">GO BACK</a></center>
