--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -30,6 +30,7 @@
       </ul>
     </div>
   </div>
+
    <script>
     $(function(){
       var p = ({{stats.attending.length}}/{{stats.total}})*100;
@@ -39,6 +40,7 @@
    </script>
    <ul id="graph">
    <li id="perce" style="background-color: #2878d8; height: 40px"><center><script>document.write(Math.round(({{stats.attending.length}}/{{stats.total}})*100)+'% attending');</script></center></li>
-   <li id="perce2" style="background-color: #ff9400; height: 40px"><center><script>document.write(Math.round(({{stats.ignoring.length}}/{{stats.total}})*100)+'% attending');</script></center></li>
+   <li id="perce2" style="background-color: #ff9400; height: 40px"><center><script>document.write(Math.round(({{stats.ignoring.length}}/{{stats.total}})*100)+'% not attending');</script></center></li>
    </ul>
+   
 </html>
