--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -43,5 +43,5 @@
    <li id="perce2" style="background-color: #ff9400; height: 40px"><center><script>document.write(Math.round(({{stats.ignoring.length}}/{{stats.total}})*100)+'% ignoring');</script></center></li>
    </ul>
 
-   <center><a href="/class?classid={{classid}}">GO BACK</a></center>
+   <ul id="goback"><li><a style="text-decoration: none" href="/class?classid={{classid}}"><b><i class="fa fa-long-arrow-left"></i> back</b></a></li></ul>
 </html>
