--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -47,5 +47,6 @@
     </div> <!-- CLOSE PROFILE -->
   {{/each}}
   </div>
+  <ul id="goback"><li><a style="text-decoration: none" href="/index"><b><i class="fa fa-long-arrow-left"></i> back</b></a></li></ul>
   <!-- END BODY -->
 </html>
