--- a/views/students.handlebars
+++ b/views/students.handlebars
@@ -23,5 +23,5 @@
     {{/each}}
   {{/each}}
 
-  <center><a href="/class?classid={{classid}}">GO BACK</a></center>
+  <ul id="goback"><li><a style="text-decoration: none" href="/class?classid={{classid}}"><b><i class="fa fa-long-arrow-left"></i> back</b></a></li></ul>
 </html>
