--- a/views/createpost.handlebars
+++ b/views/createpost.handlebars
@@ -33,5 +33,5 @@
     </div>
   </div>
 
-  <center><a href="/class?classid={{classid}}">GO BACK</a></center>
+  <ul id="goback"><li><a style="text-decoration: none" href="/class?classid={{classid}}"><b><i class="fa fa-long-arrow-left"></i> back</b></a></li></ul>
 </html>
