--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -71,5 +71,5 @@
   </ul>
   </div>
 
-  <center><a href="/class?classid={{classid}}">GO BACK</a></center>
+  <ul id="goback"><li><a style="text-decoration: none" href="/class?classid={{classid}}"><b><i class="fa fa-long-arrow-left"></i> back</b></a></li></ul>
 </html>
